# LLM_finetune

./: .gitignore  README.md  checkpoint.json  checkpoint.tmp  config.yml  dataset_generator.py  dataset_prep.ipynb  mynotes.md  notebook.ipynb  pyproject.toml  raw_dataset.jsonl  requirements.txt  sample.json  test.jsonl  train.jsonl  val.jsonl
dataset/processed/: test.jsonl  val.jsonl
dataset/processed/samples/: director.md  engineering-manager.md  junior-0-2-yrs.md  lead-principal-8-12-yrs.md  mid-level-2-5-yrs.md  senior-5-8-yrs.md  vp-c-suite.md
dataset/raw/: README.md  test.jsonl  val.jsonl
docs/: 01_DATA_PREPARATION.md  02_SILVER_EDA_AND_CLEANING.md  LLM_Dataset_Validation_Report.docx  TODO.md  bronze_dataset_guide.md
samples/: akash.json  gemma-31b-sample.json  nex-n2-pro.json  sample.json
scripts/: dataset_generator (Copy).py  dataset_generator.py  dataset_prep.ipynb  dataset_seniority_enhancement_script.py  ds_merge.ipynb  new_ds.py  token_distribution_analysis.py  unsloth_finetune.ipynb  unsloth_finetune_v2.ipynb
