[project]
name = "llm-finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.18.0",
    "litellm>=1.88.1",
    "matplotlib",
    "pandas>=3.0.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "transformers>=5.11.0",
]
